--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,24 @@
       scrollbar-width: none; /* Firefox */
     }
 }
+
+/* styles.css */
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.bg-gradient-animation {
+  background: linear-gradient(270deg, #F0B211, #754305, #F0B211);
+  background-size: 400% 400%;
+  animation: gradientAnimation 10s ease infinite;
+}
+
   
